--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -20,7 +20,7 @@
             routerLink="/login" routerLinkActive="active"> Login</a></li>
         <li class="nav__item nav__item--end logout" *ngIf="(accountService.currentUser$ | async) !== null"><a
             class="nav-link" (click)="logout()" routerLinkActive="active"> Logout</a></li>
-        <li class="nav__item"><a class="nav-link" href="https://github.com/Bicka/fe-d-tema"><i
+        <li class="nav__item"><a class="nav-link" href="https://github.com/Bicka/FED--Angular"><i
               class="fa fa-github"></i></a></li>
 
       </ul>
